--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -127,7 +127,7 @@ jobs:
         if: always()
         run: |
           c=$(docker ps -q) && [[ $c ]] && docker kill $c
-          docker system prune -a
+          docker system prune -af
 
       - name: Log in to GitHub Docker repository
         run: echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com -u ${{github.actor}} --password-stdin
@@ -171,7 +171,7 @@ jobs:
         if: always()
         run: |
           c=$(docker ps -q) && [[ $c ]] && docker kill $c
-          docker system prune -a
+          docker system prune -af
 
   integration-test:
     name: Integration Tests (hybrid-net)
