--- a/.github/workflows/market-test-suite.yml
+++ b/.github/workflows/market-test-suite.yml
@@ -1,6 +1,12 @@
 name: Market Test Suite
 
 on:
+  workflow_dispatch:
+    inputs:
+      profile:
+        description: 'Profile (unused right now)'
+        required: true
+        default: 'debug'
   push:
     branches:
       - master
