--- a/.github/workflows/fmt-clippy.yml
+++ b/.github/workflows/fmt-clippy.yml
@@ -1,4 +1,4 @@
-name: Fmt clippy check
+name: Check code integrity (lock, fmt, clippy)
 
 on:
   workflow_dispatch:
@@ -35,8 +35,6 @@ jobs:
 
       - name: Setup cache
         uses: Swatinem/rust-cache@v2
-        with:
-          save-if: ${{ github.ref == 'refs/heads/master' }}
 
       - name: Check lockfile
         uses: actions-rs/cargo@v1
