--- a/.github/workflows/unit-test-sgx.yml
+++ b/.github/workflows/unit-test-sgx.yml
@@ -11,11 +11,8 @@ on:
     branches:
       - master
       - release/*
-  pull_request:
-    branches:
-      - master
-      - release/*
-      - sgx/*
+      - '**/all-tests'
+
 
 env:
   rust_stable: 1.71.1
