--- a/.github/workflows/binaries-x86-64.yml
+++ b/.github/workflows/binaries-x86-64.yml
@@ -12,6 +12,10 @@ on:
       - master
       - release/*
       - '**/all-tests'
+  pull:
+    branches:
+      - master
+      - release/*
 
 env:
   rust_stable: 1.71.1
