--- a/.github/workflows/binaries-x86-64.yml
+++ b/.github/workflows/binaries-x86-64.yml
@@ -12,7 +12,7 @@ on:
       - master
       - release/*
       - '**/all-tests'
-  pull:
+  pull_request:
     branches:
       - master
       - release/*
