file-logging: allow configuration of logging parameters via ENV
The following ENVs have been added:
* LOG_FILES_UNCOMPRESSED with default of 1
* LOG_FILES_COMPRESSED with default of 10
* LOG_ROTATE_AGE with default of a day
* LOG_ROTATE_SIZE:
  - if unset no rotation due to size happens
  - default in .env-template is 1GiB

--- a/.env-template
+++ b/.env-template
@@ -1,6 +1,15 @@
-# Log level.
-# Default is info, but if you want to debug this is a magic setup, to skip payment driver overwhelming logs
-#RUST_LOG=debug,tokio_core=info,tokio_reactor=info,hyper=info,reqwest=info
+# Logging.
+# Log level. Default is info, but if you want to debug this is a magic setup, to skip payment driver overwhelming logs.
+# RUST_LOG=debug,tokio_core=info,tokio_reactor=info,hyper=info,reqwest=info
+# Configuration of dealing with log file history.
+# How many uncompressed logs to keep (do note that there's an additional yagna_rCURRENT.log).
+LOG_FILES_UNCOMPRESSED=1
+# How many compressed logs to keep.
+LOG_FILES_COMPRESSED=10
+# How often to rotate logs, either DAY or HOUR (case insensitive).
+LOG_ROTATE_AGE=day
+# How big of a log to rotate (even if younger than LOG_AGE). Size in bytes (the default below is 1GiB). Unset do disable.
+LOG_ROTATE_SIZE=1073741824
 
 # Application working directory path.
 YAGNA_DATADIR="."
