Scx1332/no triggers (#2776)
* Changed triggers

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -11,10 +11,9 @@ on:
     branches:
       - master
       - release/*
-  pull_request:
-    branches:
-      - master
-      - release/*
+      - '**/all-tests'
+      - '**/integration-tests'
+
 
 jobs:
   test_check:
