--- a/.github/workflows/binaries-x86-64.yml
+++ b/.github/workflows/binaries-x86-64.yml
@@ -11,7 +11,6 @@ on:
     branches:
       - master
       - release/*
-      - '**/all-tests'
   pull_request:
     branches:
       - master
@@ -25,21 +24,22 @@ jobs:
     name: Build binaries (x86-64)
     env:
       # `-D warnings` means any warnings emitted will cause build to fail
-      RUSTFLAGS: "-D warnings -C opt-level=z -C target-cpu=x86-64 -C debuginfo=1"
-      X86_64_PC_WINDOWS_MSVC_OPENSSL_DIR: c:/vcpkg/installed/x64-windows
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-
+      RUSTFLAGS: "-C opt-level=z -C target-cpu=x86-64 -C debuginfo=1"
+    runs-on: [yagna-builder, ubuntu-22.04]
     steps:
+      - name: Clean runner data
+        run: sudo rm -rf ${{ github.workspace }}/*
+
       - name: Checkout
         uses: actions/checkout@v1
 
+      - name: Extract branch name
+        id: extract_branch
+        run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
+
       - name: Musl
         run: |
-          sudo apt-get install musl musl-tools
-
+          sudo apt-get -y install musl musl-tools
           musl-gcc -v
 
       - name: Install Rust ${{ env.rust_stable }}
@@ -50,27 +50,16 @@ jobs:
           target: x86_64-unknown-linux-musl
           override: true
 
-      - name: Set build target for cache key
-        run: echo "CARGO_BUILD_TARGET=x86_64-unknown-linux-musl" >> $GITHUB_ENV
+      - name: Set build target for cache
+        id: setup_cache_target
+        run: echo "build_target=${CARGO_BUILD_TARGET:-x86_64-unknown-linux-musl}" >> $GITHUB_OUTPUT
 
-      - name: Setup cache
-        uses: Swatinem/rust-cache@v2
-        with:
-          save-if: ${{ github.ref == 'refs/heads/master' }}
-
-
-      - name: Check lockfile
-        uses: actions-rs/cargo@v1
-        with:
-          command: tree
-          args: --locked
-
-      - name: Install openssl ( Windows only )
-        if: runner.os == 'Windows'
-        run: |
-          vcpkg install openssl:x64-windows openssl:x64-windows-static
-          vcpkg list
-          vcpkg integrate install
+      - name: Load local cache
+        continue-on-error: true
+        run:
+          # Uncomment line if you want need to clear cache
+          #rm -rf "/opt/yagna_cache/${{ steps.extract_branch.outputs.branch }}/${{ steps.setup_cache_target.outputs.build_target }}/target"
+          cp -rp "/opt/yagna_cache/${{ steps.extract_branch.outputs.branch }}/${{ steps.setup_cache_target.outputs.build_target }}/target" target
 
       - name: Build binaries
         run: |
@@ -98,3 +87,9 @@ jobs:
         with:
           name: Yagna ${{ runner.os }}
           path: build
+
+      - name: Save local cache
+        run: |
+          # copy to /opt/yagna_cache and preserve permissions and timestamps
+          rsync -a --delete --mkpath target/ "/opt/yagna_cache/${{ steps.extract_branch.outputs.branch }}/${{ steps.setup_cache_target.outputs.build_target }}/target"
+
