--- a/.github/workflows/binaries-x86-64.yml
+++ b/.github/workflows/binaries-x86-64.yml
@@ -11,6 +11,8 @@ on:
     branches:
       - master
       - release/*
+      - '**/all-tests'
+      - '**/integration-tests'
   pull_request:
     branches:
       - master
