Scx1332/example/integration tests (#2780)
Small fixes in workflows

--- a/.github/workflows/fmt-clippy.yml
+++ b/.github/workflows/fmt-clippy.yml
@@ -41,6 +41,7 @@ jobs:
         with:
           command: tree
           args: --locked
+          save-if: ${{ github.ref == 'refs/heads/master' }}
 
       - name: Check formatting
         uses: actions-rs/cargo@v1
