fix system tests trigger

--- a/.github/workflows/system-test.yml
+++ b/.github/workflows/system-test.yml
@@ -7,7 +7,7 @@ on:
         description: 'Profile (unused right now)'
         required: true
         default: 'debug'
-  pull_request:
+  push:
     branches:
       - master
       - release/*
