--- a/goth_tests/domain/ya-provider/goth-config.yml
+++ b/goth_tests/domain/ya-provider/goth-config.yml
@@ -20,6 +20,13 @@ docker-compose:
     # branch: ...
     # commit-hash: ...
     # release-tag: ...
+    artifacts:
+      - name: "ya-relay"
+        use-prerelease: true
+        release-tag: "pre-rel-v0.2.3-rc4"
+      - name: "ya-runtime-vm"
+        use-prerelease: true
+        release-tag: "v0.3.0"
 
   compose-log-patterns:
     ethereum-mainnet: ".*Wallets supplied."
