--- a/.env-template
+++ b/.env-template
@@ -8,7 +8,7 @@ LOG_FILES_UNCOMPRESSED=1
 LOG_FILES_COMPRESSED=10
 # How often to rotate logs, either DAY or HOUR (case insensitive).
 LOG_ROTATE_AGE=day
-# How big of a log to rotate (even if younger than LOG_AGE). Size in bytes (the default below is 1GiB). Unset do disable.
+# How big of a log to rotate (even if younger than LOG_ROTATE_AGE). Size in bytes (the default below is 1GiB). Unset do disable.
 LOG_ROTATE_SIZE=1073741824
 
 # Application working directory path.
