reverted auto tests on pull request

--- a/.github/workflows/binaries-aarch64.yml
+++ b/.github/workflows/binaries-aarch64.yml
@@ -12,7 +12,10 @@ on:
       - master
       - release/*
       - '**/all-tests'
-
+  pull_request:
+    branches:
+      - master
+      - release/*
 
 env:
   rust_stable: 1.71.1
