--- a/.github/workflows/binaries-x86-64.yml
+++ b/.github/workflows/binaries-x86-64.yml
@@ -11,12 +11,14 @@ on:
     branches:
       - master
       - release/*
+      - p2p-stability
       - '**/all-tests'
       - '**/integration-tests'
   pull_request:
     branches:
       - master
       - release/*
+      - p2p-stability
 
 env:
   rust_stable: 1.71.1
