--- a/.github/workflows/fmt-clippy.yml
+++ b/.github/workflows/fmt-clippy.yml
@@ -11,10 +11,12 @@ on:
     branches:
       - master
       - release/*
+      - p2p-stability
   pull_request:
     branches:
       - master
       - release/*
+      - p2p-stability
 
 env:
   rust_stable: 1.71.1
