--- a/.env-template
+++ b/.env-template
@@ -23,10 +23,14 @@ YAGNA_DATADIR="."
 
 ## REST API
 
+# Set app-key on startup.
+# YAGNA_AUTOCONF_APPKEY=change_me
+
 # Optional for development - disable app-key security for backend.
 # Yagna will return default identity if no match fo app-key.
 # Enables possibility of using backend easily without bearer authentication.
-#YAGNA_DEV_DISABLE_APPKEY_SECURITY=1
+# By default it is using YAGNA_AUTOCONF_APPKEY to use default identity so it has to be set
+# YAGNA_DEV_DISABLE_APPKEY_SECURITY=1
 
 # Default HOST:PORT for all REST APIs.
 #YAGNA_API_URL=http://127.0.0.1:7465
