--- a/.github/workflows/clone_master_branch.yml
+++ b/.github/workflows/clone_master_branch.yml
@@ -7,7 +7,10 @@ jobs:
   clone-master:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout with admin privileges
+        uses: actions/checkout@v4
+        with:
+        - ssh-key: ${{secrets.ACTIONS_SSH_SECRET}}
 
       - name: Set Git config
         run: |
