--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -54,10 +54,10 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha || github.sha }}
 
-      - name: Configure Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
+      # - name: Configure Python
+      #   uses: actions/setup-python@v4
+      #   with:
+      #  python-version: "3.10"
 
       - name: Configure Poetry
         uses: Gr1N/setup-poetry@v8
