--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -59,11 +59,11 @@ jobs:
       #   with:
       #  python-version: "3.10"
 
-      - name: Configure Poetry
-        uses: Gr1N/setup-poetry@v8
-        with:
-          poetry-version: 1.6.1
-          working-directory: "./goth_tests"
+      #- name: Configure Poetry
+      #  uses: Gr1N/setup-poetry@v8
+      #  with:
+      #    poetry-version: 1.6.1
+      #    working-directory: "./goth_tests"
 
       - name: Install dependencies
         run: |
