--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -62,8 +62,9 @@ jobs:
 
       - name: Install poetry
         run: |
+          rm -rf $HOME/.poetry
           curl -sSL https://install.python-poetry.org | python3 -
-          ln -s $HOME/.poetry/bin/poetry /usr/bin/poetry
+          ln -sf $HOME/.poetry/bin/poetry /usr/bin/poetry
 
       - name: Install dependencies
         run: |
