--- a/.github/workflows/binaries-x86-64.yml
+++ b/.github/workflows/binaries-x86-64.yml
@@ -4,9 +4,13 @@ on:
   workflow_dispatch:
     inputs:
       profile:
-        description: 'Profile (unused right now)'
+        description: 'Build profile'
         required: true
         default: 'debug'
+      rust_version:
+        description: 'Rust version'
+        required: true
+        default: '1.71.1'
   push:
     branches:
       - master
@@ -19,9 +23,6 @@ on:
       - master
       - release/*
       - p2p-stability
-
-env:
-  rust_stable: 1.71.1
 
 jobs:
   build:
@@ -46,10 +47,10 @@ jobs:
           sudo apt-get -y install musl musl-tools
           musl-gcc -v
 
-      - name: Install Rust ${{ env.rust_stable }}
+      - name: Install Rust ${{ github.event.inputs.rust_version }}
         uses: dtolnay/rust-toolchain@master
         with:
-          toolchain: ${{ env.rust_stable }}
+          toolchain: ${{ github.event.inputs.rust_version }}
           components: rustfmt, clippy
           targets: x86_64-unknown-linux-musl
 
@@ -61,12 +62,12 @@ jobs:
         continue-on-error: true
         run:
           # Uncomment line if you want need to clear cache
-          # rm -rf "/opt/yagna_cache/${{ steps.extract_branch.outputs.branch }}/binaries_x86/target"
-          cp -rp "/opt/yagna_cache/${{ steps.extract_branch.outputs.branch }}/binaries_x86/target" target
+          # rm -rf "/opt/yagna_cache/${{ github.event.inputs.rust_version }}/${{ github.event.inputs.build_profile }}/${{ steps.extract_branch.outputs.branch }}/binaries_x86/target"
+          cp -rp "/opt/yagna_cache/${{ github.event.inputs.rust_version }}/${{ github.event.inputs.build_profile }}/${{ steps.extract_branch.outputs.branch }}/binaries_x86/target" target
 
       - name: Build binaries
         run: |
-          cargo build --features static-openssl --target x86_64-unknown-linux-musl -p yagna -p ya-exe-unit -p gftp -p golemsp -p ya-provider
+          cargo build --profile ${{ github.event.inputs.build_profile }} --features static-openssl --target x86_64-unknown-linux-musl -p yagna -p ya-exe-unit -p gftp -p golemsp -p ya-provider
 
       - name: Copy binaries
         shell: bash
@@ -94,5 +95,5 @@ jobs:
       - name: Save local cache
         run: |
           # copy to /opt/yagna_cache and preserve permissions and timestamps
-          rsync -a --delete --mkpath target/ "/opt/yagna_cache/${{ steps.extract_branch.outputs.branch }}/binaries_x86/target"
+          rsync -a --delete --mkpath target/ "/opt/yagna_cache/${{ github.event.inputs.rust_version }}/${{ github.event.inputs.build_profile }}/${{ steps.extract_branch.outputs.branch }}/binaries_x86/target"
 
