--- a/.github/workflows/binaries-x86-64.yml
+++ b/.github/workflows/binaries-x86-64.yml
@@ -65,7 +65,7 @@ jobs:
 
       - name: Build binaries
         run: |
-          cargo build --profile ${{ steps.variables.outputs.build_profile }} --features static-openssl --target x86_64-unknown-linux-musl -p yagna -p ya-exe-unit -p gftp -p golemsp -p ya-provider
+          cargo build --features static-openssl --target x86_64-unknown-linux-musl -p yagna -p ya-exe-unit -p gftp -p golemsp -p ya-provider
 
       - name: Copy and strip target binaries
         run: |
