--- a/.github/workflows/binaries-x86-64.yml
+++ b/.github/workflows/binaries-x86-64.yml
@@ -33,7 +33,7 @@ jobs:
     name: Build binaries (x86-64)
     env:
       RUSTFLAGS: ${{ github.event.inputs.profile || '-C opt-level=z -C target-cpu=x86-64 -C debuginfo=1' }}
-    runs-on: [yagna-builder, ubuntu-22.04]
+    runs-on: [ yagna-builder, ubuntu-22.04 ]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -43,6 +43,7 @@ jobs:
         run: |
           echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
           echo "rust_version=${{ github.event.inputs.rust_version || '1.71.1' }}" >> $GITHUB_OUTPUT
+          echo "rust_flags_md5=${RUSTFLAGS} | md5sum | awk '{print $1}'" >> $GITHUB_OUTPUT
 
       - name: Musl
         run: |
@@ -60,8 +61,8 @@ jobs:
         continue-on-error: true
         run:
           # Uncomment line if you want need to clear cache
-          # rm -rf "/opt/yagna_cache/${{ steps.variables.outputs.rust_version }}/${{ steps.variables.outputs.build_profile }}/${{ steps.variables.outputs.branch }}/binaries_x86/target"
-          cp -rp "/opt/yagna_cache/${{ steps.variables.outputs.rust_version }}/${{ steps.variables.outputs.branch }}/binaries_x86/target" target
+          # rm -rf "/opt/yagna_cache/${{ steps.variables.outputs.rust_version }}/${{ steps.variables.outputs.rust_flags_md5 }}/${{ steps.variables.outputs.build_profile }}/${{ steps.variables.outputs.branch }}/binaries_x86/target"
+          cp -rp "/opt/yagna_cache/${{ steps.variables.outputs.rust_version }}/${{ steps.variables.outputs.rust_flags_md5 }}/${{ steps.variables.outputs.branch }}/binaries_x86/target" target
 
       - name: Build binaries
         run: |
@@ -82,5 +83,5 @@ jobs:
       - name: Save local cache
         run: |
           # copy to /opt/yagna_cache and preserve permissions and timestamps
-          rsync -a --delete --mkpath target/ "/opt/yagna_cache/${{ steps.variables.outputs.rust_version }}/${{ steps.variables.outputs.branch }}/binaries_x86/target"
+          rsync -a --delete --mkpath target/ "/opt/yagna_cache/${{ steps.variables.outputs.rust_version }}/${{ steps.variables.outputs.rust_flags_md5 }}/${{ steps.variables.outputs.branch }}/binaries_x86/target"
 
