--- a/.github/workflows/binaries-x86-64.yml
+++ b/.github/workflows/binaries-x86-64.yml
@@ -43,7 +43,7 @@ jobs:
         run: |
           echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
           echo "rust_version=${{ github.event.inputs.rust_version || '1.71.1' }}" >> $GITHUB_OUTPUT
-          echo "rust_flags_md5=${RUSTFLAGS} | md5sum | awk '{print $1}'" >> $GITHUB_OUTPUT
+          echo "rust_flags_md5=`${RUSTFLAGS} | md5sum | awk '{print $1}'`" >> $GITHUB_OUTPUT
 
       - name: Musl
         run: |
