--- a/.github/workflows/binaries-x86-64.yml
+++ b/.github/workflows/binaries-x86-64.yml
@@ -61,8 +61,8 @@ jobs:
         continue-on-error: true
         run:
           # Uncomment line if you want need to clear cache
-          # rm -rf "/opt/yagna_cache/${{ steps.variables.outputs.rust_version }}/${{ steps.variables.outputs.rust_flags_md5 }}/${{ steps.variables.outputs.build_profile }}/${{ steps.variables.outputs.branch }}/binaries_x86/target"
-          cp -rp "/opt/yagna_cache/${{ steps.variables.outputs.rust_version }}/${{ steps.variables.outputs.rust_flags_md5 }}/${{ steps.variables.outputs.branch }}/binaries_x86/target" target
+          # rm -rf "/opt/yagna_cache/${{ steps.variables.outputs.rust_version }}/${{ steps.variables.outputs.branch }}/${{ steps.variables.outputs.rust_flags_md5 }}/binaries_x86/target"
+          cp -rp "/opt/yagna_cache/${{ steps.variables.outputs.rust_version }}/${{ steps.variables.outputs.branch }}/${{ steps.variables.outputs.rust_flags_md5 }}/binaries_x86/target" target
 
       - name: Build binaries
         run: |
@@ -83,5 +83,5 @@ jobs:
       - name: Save local cache
         run: |
           # copy to /opt/yagna_cache and preserve permissions and timestamps
-          rsync -a --delete --mkpath target/ "/opt/yagna_cache/${{ steps.variables.outputs.rust_version }}/${{ steps.variables.outputs.rust_flags_md5 }}/${{ steps.variables.outputs.branch }}/binaries_x86/target"
+          rsync -a --delete --mkpath target/ "/opt/yagna_cache/${{ steps.variables.outputs.rust_version }}/${{ steps.variables.outputs.branch }}/${{ steps.variables.outputs.rust_flags_md5 }}/binaries_x86/target"
 
