--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -3,10 +3,9 @@ name: Goth integration tests (hybrid-net)
 on:
   workflow_dispatch:
     inputs:
-      profile:
-        description: 'Profile (unused right now)'
+      artifacts:
+        description: 'Binaries zip file url'
         required: true
-        default: 'debug'
   push:
     branches:
       - master
@@ -24,6 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Wait for build to succeed ( ubuntu )
+        if: github.event_name != 'workflow_dispatch'
         uses: tomchv/wait-my-workflow@v1.1.0
         id: wait-for-build-ubu
         with:
@@ -34,6 +34,7 @@ jobs:
           timeoutSeconds: 3600
 
       - name: Fail if build was not a success ( ubuntu )
+        if: github.event_name != 'workflow_dispatch'
         run: echo job status= ${{ steps.wait-for-build-ubu.outputs.conclusion }} && ${{ fromJSON('["false", "true"]')[steps.wait-for-build-ubu.outputs.conclusion == 'success'] }}
 
   integration-test-groups:
