--- a/.github/workflows/binaries-x86-64.yml
+++ b/.github/workflows/binaries-x86-64.yml
@@ -66,7 +66,7 @@ jobs:
         run:
           # Uncomment line if you want need to clear cache
           # rm -rf "$cache_dir"
-          [ -d "$cache_dir" ] && cp -rp "$cache_dir" target
+          cp -rp "$cache_dir" target || echo "No local cache found"
           echo "cache_dir=$cache_dir" >> $GITHUB_OUTPUT
 
       - name: Build binaries
